締切ボタン(画面更新を停止しておく)を追加

--- a/assets/index.html
+++ b/assets/index.html
@@ -17,6 +17,7 @@
 <header>
     <div class="manage">
         <button class="btn btn-success" id="btnStart">スタート</button>
+        <button class="btn btn-warning" id="btnStop">締切</button>
         <button class="btn btn-danger" id="btnRemoveMap">終了</button>
         <span class="status"></span>
     </div>
